# GPU-Puzzles

./: GPU_puzzlers.ipynb  lib.py  pixi.toml  pyproject.toml
